--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "aaa",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
-    "passport-local": "^1.0.0"
+    "method-override": "^3.0.0",
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.14"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
