--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "fs": "0.0.1-security",
+    "play-sound": "^1.1.3",
+    "request": "^2.88.2",
+    "sound-play": "^1.1.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
