--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "mysql": "^2.18.1",
     "play-sound": "^1.1.3",
     "request": "^2.88.2",
     "sound-play": "^1.1.0"
