Get historical data
Connection to API, one year dat period

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "immutable": "^4.0.0",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "play-sound": "^1.1.3",
