--- a/package.json
+++ b/package.json
@@ -4,22 +4,30 @@
   "main": "index.js",
   "scripts": {
     "devStart": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test":"jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "async_hooks": "^1.0.0",
     "body-parser": "^1.19.0",
+    "chart.js": "^3.6.0",
+    "continuation-local-storage": "^3.2.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "immutable": "^4.0.0",
+    "jest": "^27.3.1",
+    "jtest": "0.0.1",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "node-localstorage": "^2.2.1",
     "play-sound": "^1.1.3",
     "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "sound-play": "^1.1.0"
   },
   "devDependencies": {
